# PracticasIG

./: .gitignore  CMakeLists.txt  PracticasIG.sln
CuboRotativo/: cubo.cpp
ExamenGrua/: Examen.cpp
Practica 6/: Practica6.cpp
Practica1/: Practica1.vcxproj  Practica1.vcxproj.filters  practica1.cpp
Practica2/: Practica2.vcxproj  Practica2.vcxproj.filters  pendulo.cpp  practica2.cpp
Practica3/: Practica3.cpp  practica3.cpp
Practica4/: practica4.cpp
Practica5/: Camera.cpp  Camera.h  practica5.cpp
Practica6/: practica6.cpp
Practica7/: practica7.cpp
